# Mediatheque_Encapsulation

./: .gitignore  Bootstrap.bat  CmakeLists.txt  MediathequeV1.sln
MediathequeV1/: Client.h  Commands.cpp  Commands.h  IMedia.h  Media.h  Mediatheque.cpp  Mediatheque.h  MediathequeV1.vcxproj  Movie.h  main.cpp
mylib/: CMakeLists.txt
mylib/include/: Book.h  Mediatheque.h  VideoGame.h
mylib/src/: Commands.cpp  Mediatheque.cpp
sample/: CmakeLists.txt
sample/src/: main.cpp
